--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 
 .header_sec_cont{
   position: relative;
-  background: url('/img/background.png') no-repeat center center/cover;
+  background: url('img/background.png') no-repeat center center/cover;
   background-color: #f5f5f5;
   min-height: 100vh;
   display: flex;
