--- a/style.css
+++ b/style.css
@@ -8,22 +8,43 @@ body{
 .navbar_list{
     display: flex;
     justify-content: space-evenly;
-    margin: 3% 1% 3% 45%;
+    margin: 3% 1% 3% 40%;
     list-style: none;
     align-items: center;
     color: black;
+    font-size: 25px;
 }
 
-.navbar_list button{
+.navbar_for_mobile {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    background: grey;
+    padding: 30px;
+    height: 100%;
+}
+
+
+.contact_us_button {
     background-color: #F84646;
     border: 1px;
     height: 40px;
     width: 100px;
 }
 
-.navbar_list img {
+.hamburger_button {
     display: none;
+    cursor: pointer;
 }
+
+.x_icon{
+    display: none;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+}
+
 
 .header_sec_cont{
   position: relative;
@@ -154,18 +175,17 @@ body{
 @media (max-width: 1200px){
 
     .navbar_list{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 3% 1% 3% 30%;
-    list-style: none;
-    align-items: center;
+`       display: flex;
+        justify-content: space-evenly;
+        margin: 3% 1% 3% 20%;
+        list-style: none;
+        align-items: center;
+        font-size: 20px;
     }
 
     .header_text_cont {
     display: flex;
-    text-align: center;
     flex-direction: column;
-    align-items: center;
     }
 
     .header_text1 {
@@ -228,6 +248,7 @@ body{
 @media (max-width: 640px){
 
     .navbar_list{
+    gap: 15px;
     font-size: 12px;
     }
 
@@ -241,15 +262,45 @@ body{
 }
 
 @media (max-width: 550px){
-    .navbar_list{
-    display: flex;
-    flex-wrap: wrap;
+
+    .navbar_list li{
+    display: none;
     }
 
-    .header_text1 {
-    font-size: 40px;
-    width: 90%;
+    .navbar_list {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 30px 10px 10px;
     }
+
+    .hamburger_button{
+    display: flex;
+    position: relative;
+    right: 30px;
+    }
+
+    .navbar_for_mobile {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: -3%;
+        background: grey;
+        padding: 70px 10px 0px 10px;
+        height: 100%;
+    }
+
+    .header_text_cont {
+    margin: 10% 0% 10% 0%;
+    }
+
+    .x_icon{
+    display: flex;
+    position: absolute;
+    width: 20%;
+    right: 103px;
+    top: 20px;
+    cursor: pointer;
+}
 }
 
 @media (max-width: 426px) {
