--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ body{
 @media (max-width: 1200px){
 
     .navbar_list{
-`   display: flex;
+    display: flex;
     justify-content: space-evenly;
     margin: 3% 1% 3% 20%;
     list-style: none;
